Refactored BrowserMock cookie handling and added addAll method to Header